SignUp and SignIn is made Password hashed and Salt is added to database.

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SRS.db"
   },
+
+  "Jwt": {
+    "Key": "hdGZ4Dx65ReMrq15ywBsCNUs",
+    "Issuer": "FinalSRS.com"
+  },
+
   "AllowedHosts": "*"
 }
