implemented jwt token when signup

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,8 +10,9 @@
   },
 
   "Jwt": {
-    "Key": "hdGZ4Dx65ReMrq15ywBsCNUs",
-    "Issuer": "FinalSRS.com"
+    "Secret": "ar3hedHnq9WFs1gCyPikEPs2jesC5Ef2GA5gW{>rirgRKGEPs2jesC5Ef2GA5KGr2jes2jes",
+    "TokenValidityInMintues": 360,
+    "RefreshTokenValidityInDays": 7
   },
 
   "AllowedHosts": "*"
