--- a/SRSWebApi.csproj
+++ b/SRSWebApi.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="DotNetBrightener.Infrastructure.JwtAuthentication" Version="2024.0.11.8200" />
 		<PackageReference Include="LDS.LVDGW.Plugin.JWTAuthentication" Version="1.0.2" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.5" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.0" />
